scripts/nullaway/wpi/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8.txt
../wpi/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:133: error: [NullAway] dereferenced expression view is @Nullable
        view.setElevatorPassengers(elevator.getElevatorPassengers());
            ^
    (see http://t.uber.com/nullaway )
../wpi/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:140: error: [NullAway] dereferenced expression floorsMap.get(floor) is @Nullable
            floorsMap.get(floor).update(floor.getDispatchPassengers(), floor.getArrivalPassengers());
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:143: error: [NullAway] dereferenced expression floorsMap.get(elevator.getCurrentFloor()) is @Nullable
        floorsMap.get(elevator.getCurrentFloor()).setElevatorPassengers(elevator.getElevatorPassengers());
                                                 ^
    (see http://t.uber.com/nullaway )
3 errors
